# FinPulse

./: .gitignore  README.md  add_csrf.py  app.py  dashboard.html  index.js  metadata.json  migrate_loans.py  models.py  pyproject.toml  requirements.txt  setup_db.py  wrangler.toml
finpulse---smart-financial-core/: .gitignore  README.md  app.py  migrate_loans.py  models.py  requirements.txt  setup_db.py
finpulse---smart-financial-core/services/: daily_report_service.py  groq_service.py  local_ai_service.py
finpulse---smart-financial-core/static/: manifest.json  style.css
finpulse---smart-financial-core/templates/: admin.html  auth.html  base.html  budgets.html  dashboard.html  telegram.html  transactions.html
services/: groq_service.py  recurring_service.py  telegram_service.py
static/: style.css  sw.js
templates/: accounts.html  admin.html  auth.html  base.html  budgets.html  chat.html  dashboard.html  loans.html  recurring.html  reports.html  shortcut.html  telegram.html  transactions.html
