[project]
name = "finpulse"
version = "0.1.0"
description = "FinPulse Personal Financial Dashboard"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-cors",
    "flask-login",
    "python-dotenv",
    "groq",
    "httpx",
    "sqlalchemy-cloudflare-d1",
    "flask-wtf",
    "a2wsgi"
]

[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk"]
